# yellow-pokemon

./: README.md  db.sqlite3  pyproject.toml
authentication/: admin.py  forms.py  models.py  views.py
authentication/migrations/: 0001_initial.py  0002_author_following.py  0002_auto_20210710_1710.py  0003_remove_author_following.py  0004_author_following.py
frontend/: views.py
media/: admin.py  forms.py  models.py  responses.py  views.py
media/migrations/: 0001_initial.py  0002_alter_image_image.py  0003_alter_image_image.py  0003_auto_20210708_2351.py  0004_remove_image_description.py
picture_perfect/: asgi.py  settings.py  urls.py  wsgi.py
profile_page/: urls.py  views.py
static/css/: styles.css
templates/: 404error.html  500error.html  FAQ.html  comment_form.html  display_posts.html  footer.html  generic_form.html  help.html  index.html  login_form.html  nav.html  new_post_form.html  post_detail.html  profile.html  signup_form.html  terms.html  upload.html
user_interaction/: admin.py  forms.py  models.py  urls.py  views.py
user_interaction/migrations/: 0001_initial.py  0002_comment.py  0003_auto_20210710_0025.py
